fixed headerbar overlap on mobile

--- a/ripview/src/components/Header.module.css
+++ b/ripview/src/components/Header.module.css
@@ -8,7 +8,7 @@
     border-bottom: 0.0625rem solid var(--gray-alpha-200);
     z-index: 10;
     width: 100%;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .navBar h1 {
@@ -18,11 +18,13 @@
     text-align: center;
     font-size: 1.5rem;
     margin: 0;
+    white-space: nowrap;
 }
 
 .lightLogo {
-    position: absolute;
-    left: 1.5rem;
+    margin-right: auto;
+    border: none;
+    justify-content: flex-start;
 }
 
 .mapButton {
@@ -35,7 +37,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-left: auto;
-    margin-right: 2.5rem;
+    justify-content: flex-end;
 }
 
 .mapButton:hover {
